--- a/examples/24-tfidf/01-token.ipynb
+++ b/examples/24-tfidf/01-token.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,12 @@
     "import numpy.random as rng\n",
     "import pandas as pd\n",
     "# from tqdm import tqdm\n",
-    "from tqdm.notebook import tqdm\n",
+    "#from tqdm.notebook import tqdm\n",
     "\n",
-    "# np.set_printoptions(precision=2) # вывод на печать чисел до 2 знака\n",
+    "np.set_printoptions(precision=2) # вывод на печать чисел до 2 знака\n",
     "pd.options.display.max_colwidth = 200 \n",
     "\n",
-    "tqdm.pandas()"
+    "#tqdm.pandas()"
    ]
   },
   {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        " 'нему)']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        " 'я']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -482,34 +482,6 @@
      "output_type": "stream",
      "text": [
       "NLTK Downloader\n",
-      "---------------------------------------------------------------------------\n",
-      "    d) Download   l) List    u) Update   c) Config   h) Help   q) Quit\n",
-      "---------------------------------------------------------------------------\n",
-      "Downloader> l\n",
-      "\n",
-      "Packages:\n",
-      "  [ ] abc................. Australian Broadcasting Commission 2006\n",
-      "  [ ] alpino.............. Alpino Dutch Treebank\n",
-      "  [ ] averaged_perceptron_tagger Averaged Perceptron Tagger\n",
-      "  [*] averaged_perceptron_tagger_ru Averaged Perceptron Tagger (Russian)\n",
-      "  [ ] basque_grammars..... Grammars for Basque\n",
-      "  [ ] bcp47............... BCP-47 Language Tags\n",
-      "  [ ] biocreative_ppi..... BioCreAtIvE (Critical Assessment of Information\n",
-      "                           Extraction Systems in Biology)\n",
-      "  [ ] bllip_wsj_no_aux.... BLLIP Parser: WSJ Model\n",
-      "  [ ] book_grammars....... Grammars from NLTK Book\n",
-      "  [ ] brown............... Brown Corpus\n",
-      "  [ ] brown_tei........... Brown Corpus (TEI XML Version)\n",
-      "  [ ] cess_cat............ CESS-CAT Treebank\n",
-      "  [ ] cess_esp............ CESS-ESP Treebank\n",
-      "  [ ] chat80.............. Chat-80 Data Files\n",
-      "  [ ] city_database....... City Database\n",
-      "  [ ] cmudict............. The Carnegie Mellon Pronouncing Dictionary (0.6)\n",
-      "  [ ] comparative_sentences Comparative Sentence Dataset\n",
-      "  [ ] comtrans............ ComTrans Corpus Sample\n",
-      "  [ ] conll2000........... CONLL 2000 Chunking Corpus\n",
-      "Hit Enter to continue: q\n",
-      "\n",
       "---------------------------------------------------------------------------\n",
       "    d) Download   l) List    u) Update   c) Config   h) Help   q) Quit\n",
       "---------------------------------------------------------------------------\n",
@@ -522,7 +494,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,12 +502,13 @@
    "source": [
     "# NLTK package manager\n",
     "import nltk\n",
+    "\n",
     "nltk.download()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1489,6 +1462,7 @@
    "source": [
     "from nltk.tokenize import sent_tokenize as nltk_sentence_split\n",
     "from nltk.tokenize import word_tokenize as nltk_tokenize_word\n",
+    "\n",
     "from nltk.stem.snowball import SnowballStemmer\n",
     "\n",
     "stemmer = SnowballStemmer('russian')\n",
@@ -1507,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1668,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1688,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1721,31 +1695,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[DocToken(start=286, stop=290, text='Я-то'),\n",
-       " DocToken(start=291, stop=299, text='кой-куда'),\n",
-       " DocToken(start=300, stop=303, text='еще'),\n",
-       " DocToken(start=304, stop=311, text='выходил'),\n",
-       " DocToken(start=312, stop=313, text='и'),\n",
-       " DocToken(start=314, stop=325, text='по-прежнему'),\n",
-       " DocToken(start=326, stop=334, text='приносил'),\n",
-       " DocToken(start=335, stop=338, text='ему'),\n",
-       " DocToken(start=339, stop=345, text='разные'),\n",
-       " DocToken(start=346, stop=351, text='вести'),\n",
-       " DocToken(start=351, stop=352, text=','),\n",
-       " DocToken(start=353, stop=356, text='без'),\n",
-       " DocToken(start=357, stop=361, text='чего'),\n",
-       " DocToken(start=362, stop=364, text='он'),\n",
-       " DocToken(start=365, stop=366, text='и'),\n",
-       " DocToken(start=367, stop=374, text='пробыть'),\n",
-       " DocToken(start=375, stop=377, text='не'),\n",
-       " DocToken(start=378, stop=381, text='мог'),\n",
-       " DocToken(start=381, stop=382, text='.')]"
+       "[DocToken(start=187, stop=189, text='По'),\n",
+       " DocToken(start=190, stop=197, text='крайней'),\n",
+       " DocToken(start=198, stop=202, text='мере'),\n",
+       " DocToken(start=203, stop=205, text='мы'),\n",
+       " DocToken(start=206, stop=208, text='со'),\n",
+       " DocToken(start=209, stop=217, text='Степаном'),\n",
+       " DocToken(start=218, stop=230, text='Трофимовичем'),\n",
+       " DocToken(start=231, stop=232, text='в'),\n",
+       " DocToken(start=233, stop=239, text='первое'),\n",
+       " DocToken(start=240, stop=245, text='время'),\n",
+       " DocToken(start=246, stop=255, text='заперлись'),\n",
+       " DocToken(start=256, stop=257, text='и'),\n",
+       " DocToken(start=258, stop=259, text='с'),\n",
+       " DocToken(start=260, stop=267, text='испугом'),\n",
+       " DocToken(start=268, stop=277, text='наблюдали'),\n",
+       " DocToken(start=278, stop=284, text='издали'),\n",
+       " DocToken(start=284, stop=285, text='.')]"
       ]
      },
      "metadata": {},
@@ -1760,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1781,31 +1753,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[DocToken(start=286, stop=290, text='Я-то', pos='PROPN', feats=<Anim,Nom,Masc,Sing>),\n",
-       " DocToken(start=291, stop=299, text='кой-куда', pos='VERB', feats=<Perf,Masc,Ind,Sing,Past,Fin,Mid>),\n",
-       " DocToken(start=300, stop=303, text='еще', pos='ADV', feats=<Pos>),\n",
-       " DocToken(start=304, stop=311, text='выходил', pos='VERB', feats=<Imp,Masc,Ind,Sing,Past,Fin,Act>),\n",
-       " DocToken(start=312, stop=313, text='и', pos='CCONJ'),\n",
-       " DocToken(start=314, stop=325, text='по-прежнему', pos='ADV', feats=<Pos>),\n",
-       " DocToken(start=326, stop=334, text='приносил', pos='VERB', feats=<Imp,Masc,Ind,Sing,Past,Fin,Act>),\n",
-       " DocToken(start=335, stop=338, text='ему', pos='PRON', feats=<Dat,Masc,Sing,3>),\n",
-       " DocToken(start=339, stop=345, text='разные', pos='ADJ', feats=<Inan,Acc,Pos,Plur>),\n",
-       " DocToken(start=346, stop=351, text='вести', pos='NOUN', feats=<Inan,Acc,Fem,Plur>),\n",
-       " DocToken(start=351, stop=352, text=',', pos='PUNCT'),\n",
-       " DocToken(start=353, stop=356, text='без', pos='ADP'),\n",
-       " DocToken(start=357, stop=361, text='чего', pos='PRON', feats=<Inan,Gen,Neut,Sing>),\n",
-       " DocToken(start=362, stop=364, text='он', pos='PRON', feats=<Nom,Masc,Sing,3>),\n",
-       " DocToken(start=365, stop=366, text='и', pos='PART'),\n",
-       " DocToken(start=367, stop=374, text='пробыть', pos='VERB', feats=<Perf,Inf,Act>),\n",
-       " DocToken(start=375, stop=377, text='не', pos='PART', feats=<Neg>),\n",
-       " DocToken(start=378, stop=381, text='мог', pos='VERB', feats=<Imp,Masc,Ind,Sing,Past,Fin,Act>),\n",
-       " DocToken(start=381, stop=382, text='.', pos='PUNCT')]"
+       "[DocToken(start=187, stop=189, text='По', pos='ADP'),\n",
+       " DocToken(start=190, stop=197, text='крайней', pos='ADJ', feats=<Dat,Pos,Fem,Sing>),\n",
+       " DocToken(start=198, stop=202, text='мере', pos='NOUN', feats=<Inan,Dat,Fem,Sing>),\n",
+       " DocToken(start=203, stop=205, text='мы', pos='PRON', feats=<Nom,Plur,1>),\n",
+       " DocToken(start=206, stop=208, text='со', pos='ADP'),\n",
+       " DocToken(start=209, stop=217, text='Степаном', pos='PROPN', feats=<Anim,Ins,Masc,Sing>),\n",
+       " DocToken(start=218, stop=230, text='Трофимовичем', pos='PROPN', feats=<Anim,Ins,Masc,Sing>),\n",
+       " DocToken(start=231, stop=232, text='в', pos='ADP'),\n",
+       " DocToken(start=233, stop=239, text='первое', pos='ADJ', feats=<Inan,Acc,Pos,Neut,Sing>),\n",
+       " DocToken(start=240, stop=245, text='время', pos='NOUN', feats=<Inan,Acc,Neut,Sing>),\n",
+       " DocToken(start=246, stop=255, text='заперлись', pos='VERB', feats=<Perf,Ind,Plur,Past,Fin,Mid>),\n",
+       " DocToken(start=256, stop=257, text='и', pos='PART'),\n",
+       " DocToken(start=258, stop=259, text='с', pos='ADP'),\n",
+       " DocToken(start=260, stop=267, text='испугом', pos='NOUN', feats=<Inan,Ins,Masc,Sing>),\n",
+       " DocToken(start=268, stop=277, text='наблюдали', pos='VERB', feats=<Imp,Ind,Plur,Past,Fin,Act>),\n",
+       " DocToken(start=278, stop=284, text='издали', pos='NOUN', feats=<Inan,Acc,Fem,Plur>),\n",
+       " DocToken(start=284, stop=285, text='.', pos='PUNCT')]"
       ]
      },
      "metadata": {},
@@ -1818,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1827,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1840,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
