--- a/examples/24-tfidf/03-vectorizer.ipynb
+++ b/examples/24-tfidf/03-vectorizer.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,6 +218,7 @@
    ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
     "tf_model = CountVectorizer().fit(docs)\n",
     " \n",
     "tf_table(\n",
@@ -386,14 +387,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "словарь: 22 слов\n",
+      "словарь: 13 слов\n",
       "\n"
      ]
     },
@@ -418,38 +419,22 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>and</th>\n",
        "      <th>and this</th>\n",
-       "      <th>document</th>\n",
        "      <th>document is</th>\n",
-       "      <th>first</th>\n",
        "      <th>first document</th>\n",
-       "      <th>is</th>\n",
        "      <th>is the</th>\n",
        "      <th>is this</th>\n",
-       "      <th>one</th>\n",
-       "      <th>...</th>\n",
-       "      <th>the</th>\n",
+       "      <th>second document</th>\n",
        "      <th>the first</th>\n",
        "      <th>the second</th>\n",
        "      <th>the third</th>\n",
-       "      <th>third</th>\n",
        "      <th>third one</th>\n",
-       "      <th>this</th>\n",
        "      <th>this document</th>\n",
        "      <th>this is</th>\n",
        "      <th>this the</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sentence</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -471,21 +456,13 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -493,23 +470,15 @@
        "    <tr>\n",
        "      <th>This document is the second document.</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -517,21 +486,13 @@
        "    <tr>\n",
        "      <th>And this is the third one.</th>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -545,75 +506,57 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                       and  and this  document  document is  \\\n",
-       "Sentence                                                                      \n",
-       "This is the first document.              0         0         1            0   \n",
-       "This document is the second document.    0         0         2            1   \n",
-       "And this is the third one.               1         1         0            0   \n",
-       "Is this the first document?              0         0         1            0   \n",
+       "                                       and this  document is  first document  \\\n",
+       "Sentence                                                                       \n",
+       "This is the first document.                   0            0               1   \n",
+       "This document is the second document.         0            1               0   \n",
+       "And this is the third one.                    1            0               0   \n",
+       "Is this the first document?                   0            0               1   \n",
        "\n",
-       "                                       first  first document  is  is the  \\\n",
+       "                                       is the  is this  second document  \\\n",
+       "Sentence                                                                  \n",
+       "This is the first document.                 1        0                0   \n",
+       "This document is the second document.       1        0                1   \n",
+       "And this is the third one.                  1        0                0   \n",
+       "Is this the first document?                 0        1                0   \n",
+       "\n",
+       "                                       the first  the second  the third  \\\n",
+       "Sentence                                                                  \n",
+       "This is the first document.                    1           0          0   \n",
+       "This document is the second document.          0           1          0   \n",
+       "And this is the third one.                     0           0          1   \n",
+       "Is this the first document?                    1           0          0   \n",
+       "\n",
+       "                                       third one  this document  this is  \\\n",
        "Sentence                                                                   \n",
-       "This is the first document.                1               1   1       1   \n",
-       "This document is the second document.      0               0   1       1   \n",
-       "And this is the third one.                 0               0   1       1   \n",
-       "Is this the first document?                1               1   1       0   \n",
+       "This is the first document.                    0              0        1   \n",
+       "This document is the second document.          0              1        0   \n",
+       "And this is the third one.                     1              0        1   \n",
+       "Is this the first document?                    0              0        0   \n",
        "\n",
-       "                                       is this  one  ...  the  the first  \\\n",
-       "Sentence                                             ...                   \n",
-       "This is the first document.                  0    0  ...    1          1   \n",
-       "This document is the second document.        0    0  ...    1          0   \n",
-       "And this is the third one.                   0    1  ...    1          0   \n",
-       "Is this the first document?                  1    0  ...    1          1   \n",
-       "\n",
-       "                                       the second  the third  third  \\\n",
-       "Sentence                                                              \n",
-       "This is the first document.                     0          0      0   \n",
-       "This document is the second document.           1          0      0   \n",
-       "And this is the third one.                      0          1      1   \n",
-       "Is this the first document?                     0          0      0   \n",
-       "\n",
-       "                                       third one  this  this document  \\\n",
-       "Sentence                                                                \n",
-       "This is the first document.                    0     1              0   \n",
-       "This document is the second document.          0     1              1   \n",
-       "And this is the third one.                     1     1              0   \n",
-       "Is this the first document?                    0     1              0   \n",
-       "\n",
-       "                                       this is  this the  \n",
-       "Sentence                                                  \n",
-       "This is the first document.                  1         0  \n",
-       "This document is the second document.        0         0  \n",
-       "And this is the third one.                   1         0  \n",
-       "Is this the first document?                  0         1  \n",
-       "\n",
-       "[4 rows x 22 columns]"
+       "                                       this the  \n",
+       "Sentence                                         \n",
+       "This is the first document.                   0  \n",
+       "This document is the second document.         0  \n",
+       "And this is the third one.                    0  \n",
+       "Is this the first document?                   1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +564,7 @@
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "tf_model = CountVectorizer(ngram_range=(1,2)).fit(docs)\n",
+    "tf_model = CountVectorizer(ngram_range=(2,2)).fit(docs)\n",
     "\n",
     "tf_table(\n",
     "    x = tf_model.transform(docs).todense(),\n",
@@ -698,50 +641,50 @@
        "    <tr>\n",
        "      <th>This is the first document.</th>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.47</td>\n",
-       "      <td>0.58</td>\n",
-       "      <td>0.38</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.45</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.38</td>\n",
+       "      <td>0.45</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.38</td>\n",
+       "      <td>0.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>This document is the second document.</th>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.69</td>\n",
+       "      <td>0.71</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.28</td>\n",
+       "      <td>0.35</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>0.28</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.35</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.28</td>\n",
+       "      <td>0.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>And this is the third one.</th>\n",
-       "      <td>0.51</td>\n",
+       "      <td>0.41</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>0.51</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>0.41</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>0.27</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>0.41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Is this the first document?</th>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.47</td>\n",
-       "      <td>0.58</td>\n",
-       "      <td>0.38</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.45</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.38</td>\n",
+       "      <td>0.45</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.38</td>\n",
+       "      <td>0.45</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -750,17 +693,17 @@
       "text/plain": [
        "                                        and  document  first    is   one  \\\n",
        "Sentence                                                                   \n",
-       "This is the first document.            0.00      0.47   0.58  0.38  0.00   \n",
-       "This document is the second document.  0.00      0.69   0.00  0.28  0.00   \n",
-       "And this is the third one.             0.51      0.00   0.00  0.27  0.51   \n",
-       "Is this the first document?            0.00      0.47   0.58  0.38  0.00   \n",
+       "This is the first document.            0.00      0.45   0.45  0.45  0.00   \n",
+       "This document is the second document.  0.00      0.71   0.00  0.35  0.00   \n",
+       "And this is the third one.             0.41      0.00   0.00  0.41  0.41   \n",
+       "Is this the first document?            0.00      0.45   0.45  0.45  0.00   \n",
        "\n",
        "                                       second   the  third  this  \n",
        "Sentence                                                          \n",
-       "This is the first document.              0.00  0.38   0.00  0.38  \n",
-       "This document is the second document.    0.54  0.28   0.00  0.28  \n",
-       "And this is the third one.               0.00  0.27   0.51  0.27  \n",
-       "Is this the first document?              0.00  0.38   0.00  0.38  "
+       "This is the first document.              0.00  0.45   0.00  0.45  \n",
+       "This document is the second document.    0.35  0.35   0.00  0.35  \n",
+       "And this is the third one.               0.00  0.41   0.41  0.41  \n",
+       "Is this the first document?              0.00  0.45   0.00  0.45  "
       ]
      },
      "execution_count": 9,
@@ -773,8 +716,9 @@
     "tf_model = CountVectorizer().fit(docs)\n",
     "\n",
     "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "\n",
     "# модель обратной частоты для понижения значимости слишком частых слов\n",
-    "idf_model = TfidfTransformer(norm='l2').fit( tf_model.transform( docs ) )\n",
+    "idf_model = TfidfTransformer(norm='l2',use_idf=False).fit( tf_model.transform( docs ) )\n",
     "\n",
     "tf_table(\n",
     "    x = idf_model.transform( tf_model.transform(docs) ).todense(),\n",
