--- a/examples/27-text-semantic-w2v/05-gensim-w2v.ipynb
+++ b/examples/27-text-semantic-w2v/05-gensim-w2v.ipynb
@@ -40,17 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "85cf57dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install gensim"
+    "#!pip install gensim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "a89cc656",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "03ee6e74",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "70b37b51",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "7f1688c2",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "decfec54",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "7b3d162b",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2e3f99d3",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "5839d494",
    "metadata": {},
    "outputs": [],
@@ -264,16 +264,16 @@
     {
      "data": {
       "text/plain": [
-       "['стратоник_NOUN',\n",
-       " 'отбавлять_VERB',\n",
-       " 'эритема_NOUN',\n",
-       " 'халявский_NOUN',\n",
-       " 'рассудочность_NOUN',\n",
-       " 'разорвание_NOUN',\n",
-       " 'флосс_NOUN',\n",
-       " 'впалый_ADJ',\n",
-       " 'дикарбоновый::кислота_NOUN',\n",
-       " 'flight_NOUN']"
+       "['затвор_NOUN',\n",
+       " 'малахитовый::шкатулка_NOUN',\n",
+       " 'слепая_NOUN',\n",
+       " 'компостер_NOUN',\n",
+       " 'титов_NOUN',\n",
+       " 'тайши_NOUN',\n",
+       " 'вфп_NOUN',\n",
+       " 'фло_NOUN',\n",
+       " 'петровский_NOUN',\n",
+       " 'нав_NOUN']"
       ]
      },
      "metadata": {},
@@ -420,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   },
   "toc": {
    "base_numbering": 1,
