--- a/examples/29-img-obj-detect/10-loc-detector-face-vj.ipynb
+++ b/examples/29-img-obj-detect/10-loc-detector-face-vj.ipynb
@@ -100,7 +100,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7e86b83e2ad0>"
+       "<matplotlib.image.AxesImage at 0x7158cbe12090>"
       ]
      },
      "execution_count": 5,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7e86b90a7c10>"
+       "<matplotlib.image.AxesImage at 0x7158e89d1f50>"
       ]
      },
      "execution_count": 10,
