--- a/examples/30-img-obj-detect-cnn/13-segm-fcn-torch.ipynb
+++ b/examples/30-img-obj-detect-cnn/13-segm-fcn-torch.ipynb
@@ -91,9 +91,7 @@
       "/opt/venv/sevgu_1/lib/python3.11/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
       "  warnings.warn(\n",
       "/opt/venv/sevgu_1/lib/python3.11/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=FCN_ResNet101_Weights.COCO_WITH_VOC_LABELS_V1`. You can also use `weights=FCN_ResNet101_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n",
-      "Downloading: \"https://download.pytorch.org/models/fcn_resnet101_coco-7ecb50ca.pth\" to /home/mechanoid/.cache/torch/hub/checkpoints/fcn_resnet101_coco-7ecb50ca.pth\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 208M/208M [00:20<00:00, 10.7MB/s]\n"
+      "  warnings.warn(msg)\n"
      ]
     }
    ],
@@ -113,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "0bf29c94",
    "metadata": {},
    "outputs": [],
@@ -146,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "478c4d96",
    "metadata": {},
    "outputs": [],
@@ -157,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "1cfaeabf",
    "metadata": {},
    "outputs": [],
@@ -206,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "423a13cb",
    "metadata": {},
    "outputs": [
