--- a/lab/04-linear/02-linear-regr.ipynb
+++ b/lab/04-linear/02-linear-regr.ipynb
@@ -178,6 +178,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# обработка данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn : Preprocessing data.    \n",
+    "https://scikit-learn.org/stable/modules/preprocessing.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## модель регрессии"
    ]
   },
@@ -303,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.14"
   },
   "toc": {
    "base_numbering": 1,
